--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div id="instructions">
         <h1>تعليمات اللعبة</h1>
         <ul>
-          <li>اضغط على السهم <strong>لأعلى</strong> لتحريك اللاعب نحو الهدف.</li>
-          <li>تحرك فقط أثناء الضوء <strong>الأخضر</strong>.</li>
-          <li>إذا تحركت أثناء الضوء <strong>الأحمر</strong>، ستخسر اللعبة.</li>
-          <li>الفوز يتحقق عند الوصول إلى <strong>الهدف</strong>.</li>
+          <li>اضغط على السهم <strong><span>لأعلى</span></strong> لتحريك اللاعب نحو الهدف</li>
+          <li>تحرك فقط أثناء الضوء <strong>الأخضر</strong></li>
+          <li>إذا تحركت أثناء الضوء <strong>الأحمر</strong> ستخسر اللعبة</li>
+          <li>الفوز يتحقق عند الوصول إلى <strong>الهدف</strong></li>
         </ul>
         <button id="start-button">تحرك</button>
   <div id="game-container">
@@ -21,6 +21,12 @@
     <div id="player"></div>
     <div id="status">Green Light</div>
   </div>
+  <div id="background-music">
+  <audio controls loop autoplay>
+    <source src="squid game music.mp3" type="audio/mpeg">
+    متصفحك لا يدعم تشغيل الصوت.
+  </audio>
+    </div>
   <script src="main.js"></script>
 </body>
 </html>
